[package]
name = "crapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
reqwest = { version = "0.11.4", features = ["json"] }
regex = "1.7.3"